--- a/rsp/Makefile
+++ b/rsp/Makefile
@@ -62,8 +62,7 @@ F_OBJS = \
 	rspief2.o       \
         rspief.o        \
         mcdrsp.o        \
-        rspqm3.o        \
-	rspqmmm.o
+        rspqm3.o
 
 F_CPPS = $(F_OBJS:.o=.i)
 
