make it possible to build dalton using own math implementation
it's also possible to use external BLAS and internal LAPACK
and vice versa

will cherry pick this commit also from trunk in a minute

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,20 @@ include(Compilers)
 set(LIBS)
 
 include(Math)
+if(NOT BLAS_FOUND)
+    message("-- Using own BLAS implementation (slow)")
+    set(FIXED_FORTRAN_SOURCES
+        ${FIXED_FORTRAN_SOURCES}
+        ${OWN_BLAS_SOURCES}
+        )
+endif()
+if(NOT LAPACK_FOUND)
+    message("-- Using own LAPACK implementation (slow)")
+    set(FIXED_FORTRAN_SOURCES
+        ${FIXED_FORTRAN_SOURCES}
+        ${OWN_LAPACK_SOURCES}
+        )
+endif()
 
 if(ENABLE_MPI)
     find_package(MPI)
