--- a/DALTON/CMakeLists.txt
+++ b/DALTON/CMakeLists.txt
@@ -83,7 +83,7 @@ set(SCRATCH_DIR
 message("-- SCRATCH_DIR set to: ${SCRATCH_DIR}")
 
 set(BASIS_DIR
-    "${CMAKE_SOURCE_DIR}/basis"
+    "${CMAKE_SOURCE_DIR}/../basis"
     CACHE STRING
     "Basis set directory"
     FORCE
